--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -22182,23 +22182,23 @@ form.checkout {
         background-repeat: no-repeat;
         background-position: right 0.6180469716em center;
         background-size: 31px 20px;
-        background-image: url(../../../assets/images/credit-cards/unknown.svg); }
+        background-image: url(../../assets/images/credit-cards/unknown.svg); }
         #payment .payment_methods li .payment_box .wc-credit-card-form-card-number.visa {
-          background-image: url(../../../assets/images/credit-cards/visa.svg); }
+          background-image: url(../../assets/images/credit-cards/visa.svg); }
         #payment .payment_methods li .payment_box .wc-credit-card-form-card-number.mastercard {
-          background-image: url(../../../assets/images/credit-cards/mastercard.svg); }
+          background-image: url(../../assets/images/credit-cards/mastercard.svg); }
         #payment .payment_methods li .payment_box .wc-credit-card-form-card-number.laser {
-          background-image: url(../../../assets/images/credit-cards/laser.svg); }
+          background-image: url(../../assets/images/credit-cards/laser.svg); }
         #payment .payment_methods li .payment_box .wc-credit-card-form-card-number.dinersclub {
-          background-image: url(../../../assets/images/credit-cards/diners.svg); }
+          background-image: url(../../assets/images/credit-cards/diners.svg); }
         #payment .payment_methods li .payment_box .wc-credit-card-form-card-number.maestro {
-          background-image: url(../../../assets/images/credit-cards/maestro.svg); }
+          background-image: url(../../assets/images/credit-cards/maestro.svg); }
         #payment .payment_methods li .payment_box .wc-credit-card-form-card-number.jcb {
-          background-image: url(../../../assets/images/credit-cards/jcb.svg); }
+          background-image: url(../../assets/images/credit-cards/jcb.svg); }
         #payment .payment_methods li .payment_box .wc-credit-card-form-card-number.amex {
-          background-image: url(../../../assets/images/credit-cards/amex.svg); }
+          background-image: url(../../assets/images/credit-cards/amex.svg); }
         #payment .payment_methods li .payment_box .wc-credit-card-form-card-number.discover {
-          background-image: url(../../../assets/images/credit-cards/discover.svg); }
+          background-image: url(../../assets/images/credit-cards/discover.svg); }
 
 #payment .terms {
   width: 100%;
