--- a/src/assets/css/slick-style.css
+++ b/src/assets/css/slick-style.css
@@ -96,8 +96,8 @@
 
 @font-face {
     font-family: "slick";
-    src: url("assets/fonts/slick/slick.eot");
-    src: url("assets/fonts/slick/slick.eot?#iefix") format("embedded-opentype"), url("assets/fonts/slick/slick.woff") format("woff"), url("assets/fonts/slick/slick.ttf") format("truetype"), url("assets/fonts/slick/slick.svg#slick") format("svg");
+    src: url("../../assets/fonts/slick/slick.eot");
+    src: url("../../assets/fonts/slick/slick.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/slick/slick.woff") format("woff"), url("../../assets/fonts/slick/slick.ttf") format("truetype"), url("../../assets/fonts/slick/slick.svg#slick") format("svg");
     font-weight: normal;
     font-style: normal;
 }
