--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -35,8 +35,8 @@ Images License: GNU General Public License v2 or later
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("../fonts/fontawesome-webfont.eot?v=4.7.0");
-  src: url("../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+  src: url("../../assets/fonts/fontawesome-webfont.eot?v=4.7.0");
+  src: url("../../assets/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../../assets/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../../assets/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../../assets/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../../assets/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -2438,8 +2438,8 @@ Images License: GNU General Public License v2 or later
 /* Icons */
 @font-face {
   font-family: "slick";
-  src: url("assets/fonts/slick/slick.eot");
-  src: url("assets/fonts/slick/slick.eot?#iefix") format("embedded-opentype"), url("assets/fonts/slick/slick.woff") format("woff"), url("assets/fonts/slick/slick.ttf") format("truetype"), url("assets/fonts/slick/slick.svg#slick") format("svg");
+  src: url("../../assets/fonts/slick/slick.eot");
+  src: url("../../assets/fonts/slick/slick.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/slick/slick.woff") format("woff"), url("../../assets/fonts/slick/slick.ttf") format("truetype"), url("../../assets/fonts/slick/slick.svg#slick") format("svg");
   font-weight: normal;
   font-style: normal; }
 
